# Ai-Voice-Agent

./: .env.example  .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/adapters/llm/: __init__.py  ollama_adapter.py
backend/app/api/: dependencies.py
backend/app/core/: __init__.py  auth_deps.py  config.py  database.py  dependencies.py  exceptions.py  jwt.py  jwt_service.py  logging_service.py  org_auth_deps.py  response.py  security.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/models/: __init__.py  agent.py  organization.py  organization_member.py  user.py
backend/app/runtime/: call_runtime.py  context.py  engine.py  event_bus.py  flow_controller.py  manager.py  ports.py  session_sync.py  simulation.py
backend/app/schemas/: auth.py  organization.py  organization_member.py  user.py
backend/app/services/: agent_service.py  auth_service.py  organization_member_service.py  organization_service.py
backend/app/utils/: chunker.py
backend/app/voice_engine/: ports.py
backend/migrations/: env.py
backend/migrations/versions/: 6b4155fcf6a9_create_agents_table.py  a136acf34cb6_initial_schema.py
backend/scripts/: demo_conversation.py  demo_full_runtime.py  demo_llm.py  demo_stt.py  demo_transcoder.py  demo_tts.py  download_kokoro.py  download_silero.py  download_whisper.py  test_websocket_client.py
backend/tests/: conftest.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py
(+282 files in other folders)
