[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-voice-agent-platform"
version = "0.1.0"
description = "Production-grade multi-tenant AI Voice Agent platform"
requires-python = ">=3.12"

dependencies = [
    # Web framework & server
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "starlette>=1.3.1",

    # Data validation & settings
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "email-validator>=2.3.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "psycopg2-binary>=2.9.0",

    # Cache / async queue
    "redis>=8.0.0",

    # Auth & security
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0",
    "PyJWT>=2.13.0",

    # HTTP client
    "httpx>=0.28.0",

    # Audio processing
    "av>=18.0.0",

    # JSON performance
    "orjson>=3.11.0",

    # Environment
    "python-dotenv>=1.2.0",

    # AI / ML providers
    "faster-whisper>=1.2.0",
    "kokoro-onnx>=0.4.0",
    "onnxruntime>=1.27.0",
    "numpy>=2.5.0",

    # Workflow engine
    "langgraph>=1.2.0",
    "langchain>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "httptools>=0.8.0",
    "uvloop>=0.22.0",
]

[tool.setuptools.packages.find]
include = ["app*", "migrations*", "scripts*"]
